# Free-Unlimited-Text-to-Speech-TUI-Rust

./: Cargo.toml  LICENSE  README.md  install.sh  run.sh  uninstall.sh
src/: app.rs  audio.rs  browser.rs  main.rs  ui.rs
