[package]
name = "speech-tui"
version = "0.1.0"
edition = "2021"
authors = ["rivadmorin"]
description = "Unlimited free Speech-to-Text dictation TUI for Linux Debian"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4"
directories = "5.0"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary

[package.metadata.deb]
maintainer = "rivadmorin"
copyright = "2026, rivadmorin"
license-file = ["LICENSE", "0"]
depends = "libasound2, libpulse0, libxcb1, wl-clipboard"
section = "utils"
priority = "optional"
assets = [
    ["target/release/speech-tui", "/usr/bin/speech-tui", "755"],
]
